--- a/srcs/requirements/nginx/conf/nginx.conf
+++ b/srcs/requirements/nginx/conf/nginx.conf
@@ -15,7 +15,7 @@ server {
     #mais je vais également en ajouter d’autres qui me semblent importantes.Je vais également préciser quelle page afficher en premier, dans le cadre de WordPress il faut indiquer index.php, mais je vais également en ajouter d’autres qui me semblent importantes.
     
     location / {
-        root /var/www/wordpress
+        root /var/www/html
         index index.php index.html index.htm 
     }
 
