--- a/srcs/.env
+++ b/srcs/.env
@@ -1,10 +1,3 @@
-
-MYSQL_ROOT_PASSWORD: somewordpress
-MYSQL_DATABASE: wordpress
-MYSQL_USER: wordpress
-MYSQL_PASSWORD: wordpress
-
-
-WORDPRESS_DB_HOST: db:3306
-WORDPRESS_DB_USER: wordpress
-WORDPRESS_DB_PASSWORD: wordpress
+db_name = wordpress
+db_user = ybouzafo
+db_pwd = usra123
