--- a/srcs/.env
+++ b/srcs/.env
@@ -1,3 +1,36 @@
-db_name = wordpress
-db_user = ybouzafo
-db_pwd = usra123
+# DOMAIN_NAME=ybouzafo.42.fr
+
+# SQL_DATABASE=mariadb
+# SQL_USER=root
+# SQL_PASSWORD=1234
+
+
+# DB_NAME=mariadb
+# DB_USER=usra
+# DB_PASSWORD=1212
+# DB_HOST=mariadb
+
+# WP_TITLE=inception
+# WP_ADMIN_USR=usraa
+# WP_ADMIN_EMAIL=usraa13@gmail.com
+# WP_EMAIL= iness13@gmail.com
+# WP_USR=iness
+# WP_PWD=1234
+
+
+
+DOMAIN_NAME=ybouzafo.42.fr
+
+DB_NAME=mariadb
+DB_HOST=maria
+DB_USER=usra
+DB_PASSWORD=12345
+
+WORDPRESS_NAME=inception
+WORDPRESS_ROOT_LOGIN=ybouzafo
+WORDPRESS_ROOT_PASSWORD=123456
+WORDPRESS_ROOT_EMAIL=ybouzafo@gmail.com
+
+WORDPRESS_SECOND_USER=iness
+WORDPRESS_USER_EMAIL=iness12@gmail.com
+WORDPRESS_SECOND_USER_PASSWORD=1212
