--- a/srcs/.env
+++ b/srcs/.env
@@ -26,6 +26,8 @@ DB_HOST=maria
 DB_USER=usra
 DB_PASSWORD=12345
 
+MYSQL_ROOT_PASSWORD=12345
+
 WORDPRESS_NAME=inception
 WORDPRESS_ROOT_LOGIN=ybouzafo
 WORDPRESS_ROOT_PASSWORD=123456
