--- a/srcs/requirements/wordpress/Dockerfile
+++ b/srcs/requirements/wordpress/Dockerfile
@@ -1,4 +1,4 @@
-# FROM debian:buster
+# FROM debian:11
 
 # RUN apt-get update
 
@@ -27,23 +27,35 @@
 # RUN chmod +x wp-cli.phar
 # RUN mv wp-cli.phar /usr/local/bin/wp
 
-# COPY ./conf/auto_config.sh /usr/local/bin/auto_config.sh
 
-# RUN chmod +x /usr/local/bin/auto_config.sh
+# COPY ./conf/www.conf /etc/php/7.3/fpm/pool.d
+# #read more about php-fpm;
+# #and visite ce site 
 
-# ENTRYPOINT ["/usr/local/bin/auto_config.sh"]
+# RUN rm -f /var/www/wp-config.php
+# COPY ./conf /var/www/
+# COPY ./tools /var/www/
+
+# EXPOSE 9000
+
+
+# # COPY ./conf/auto_config.sh /usr/local/bin/auto_config.sh
+# # RUN chmod +x /usr/local/bin/auto_config.sh
+# # CMD ["bash", "-c" , "/usr/local/bin/auto_config.sh"]
+
+# CMD ["bash", "/var/www/setup.sh"]
+
 
 
  FROM debian:buster
  # kanet debian:12 
 
 RUN apt update; \
-    apt install -y php8.2 php-mysqli php-fpm mariadb-client curl
+    apt install -y php7.3 php-mysqli php-fpm mariadb-client curl
 
-# COPY ./conf/www.conf /etc/php/8.2/fpm/pool.d
+# COPY ./conf/www.conf /etc/php/7.3/fpm/pool.d
 COPY ./conf /var/www/
 COPY ./tools /var/www/
 
-EXPOSE 9000
 
 CMD ["bash", "/var/www/setup.sh"]
