--- a/srcs/requirements/mariadb/conf/50-server.cnf
+++ b/srcs/requirements/mariadb/conf/50-server.cnf
@@ -16,8 +16,25 @@
 
 
 [mysqld]
-	datadir = /var/lib/mysql
-	# socket  = /run/mysqld/mysqld.sock
-	bind_address=*
-	port = 3306
-	user = mysql
+# datadir = /var/lib/mysql
+# #cpeecifie l emplacement du repertoire de donnees mariadb , : stocke toutes les bases de donnes et les tables que
+# #vous creez;
+# # socket  = /run/mysqld/mysqld.sock
+# bind_address=*
+
+# # Ce paramètre indique l'adresse IP sur laquelle le serveur MariaDB doit écouter les connexions.
+# # * est un caractère générique qui signifie que MariaDB acceptera les connexions sur toutes les interfaces réseau disponibles (y compris l'interface locale et les interfaces réseau externes).
+# port = 3306
+# user = mysql
+# # : Ce paramètre spécifie le nom d'utilisateur sous lequel le processus du serveur MariaDB s'exécute. 
+# #La valeur par défaut est mysql, et il est généralement recommandé de la conserver pour des raisons de compatibilité.
+
+
+user                    = mysql
+pid-file                = /run/mysqld/mysqld.pid
+socket                  = /run/mysqld/mysqld.sock
+# port                   = 3306
+basedir                 = /usr
+datadir                 = /var/lib/mysql
+tmpdir                  = /tmp
+lc-messages-dir         = /usr/share/mysql
