--- a/srcs/requirements/wordpress/conf/www.conf
+++ b/srcs/requirements/wordpress/conf/www.conf
@@ -1,4 +1,11 @@
-# [www]
-# user = www-data
-# group = www-data
-# listen = wordpress:9000
+; www.conf
+
+[www]
+user = www-data
+group = www-data
+listen = 0.0.0.0:9000
+pm = dynamic
+pm.max_children = 50
+pm.start_servers = 5
+pm.min_spare_servers = 5
+pm.max_spare_servers = 10
