--- a/srcs/.env
+++ b/srcs/.env
@@ -28,6 +28,7 @@ DB_PASSWORD=12345
 
 MYSQL_ROOT_PASSWORD=12345
 
+
 WORDPRESS_NAME=inception
 WORDPRESS_ROOT_LOGIN=ybouzafo
 WORDPRESS_ROOT_PASSWORD=123456
@@ -36,3 +37,7 @@ WORDPRESS_ROOT_EMAIL=ybouzafo@gmail.com
 WORDPRESS_SECOND_USER=iness
 WORDPRESS_USER_EMAIL=iness12@gmail.com
 WORDPRESS_SECOND_USER_PASSWORD=1212
+
+SQL_DATABASE=mariadb
+SQL_USER=usra
+SQL_PASSWORD=usra13
