--- a/srcs/.env
+++ b/srcs/.env
@@ -1,43 +1,25 @@
-# DOMAIN_NAME=ybouzafo.42.fr
-
-# SQL_DATABASE=mariadb
-# SQL_USER=root
-# SQL_PASSWORD=1234
-
-
-# DB_NAME=mariadb
-# DB_USER=usra
-# DB_PASSWORD=1212
-# DB_HOST=mariadb
-
-# WP_TITLE=inception
-# WP_ADMIN_USR=usraa
-# WP_ADMIN_EMAIL=usraa13@gmail.com
-# WP_EMAIL= iness13@gmail.com
-# WP_USR=iness
-# WP_PWD=1234
-
 
 
 DOMAIN_NAME=ybouzafo.42.fr
 
-DB_NAME=mariadb
-DB_HOST=maria
-DB_USER=usra
-DB_PASSWORD=12345
+CRT=/etc/ssl/private/ybouzafo.42.fr.crt
+KEY=/etc/ssl/certs/ybouzafo.42.fr.key
 
-MYSQL_ROOT_PASSWORD=12345
+# MYSQL SETUP
+MYSQL_DATABASE=wordpress
+MYSQL_ROOT_PASSWORD=pass1234
+MYSQL_USER=user
+MYSQL_PASSWORD=pass
+DB_HOST=mariadb
 
+# MYSQL Wordpress Admin
+WP_ADMIN_USER=usra
+WP_ADMIN_TITLE=inception
+WP_ADMIN_PASSWORD=123456
+WP_ADMIN_EMAIL=usra1234@gmail.com
 
-WORDPRESS_NAME=inception
-WORDPRESS_ROOT_LOGIN=ybouzafo
-WORDPRESS_ROOT_PASSWORD=123456
-WORDPRESS_ROOT_EMAIL=ybouzafo@gmail.com
-
-WORDPRESS_SECOND_USER=iness
-WORDPRESS_USER_EMAIL=iness12@gmail.com
-WORDPRESS_SECOND_USER_PASSWORD=1212
-
-SQL_DATABASE=mariadb
-SQL_USER=usra
-SQL_PASSWORD=usra13
+# MYSQL Wordpress user
+WP_USER_LOGIN=iness
+WP_USER_PASSWORD=1234
+WP_USER_EMAIL=user@gmail.com
+WP_USER_ROLE=author
