--- a/srcs/requirements/mariadb/Dockerfile
+++ b/srcs/requirements/mariadb/Dockerfile
@@ -1,20 +1,14 @@
+FROM debian:oldstable
 
-FROM debian:latest
-
-RUN apt update && apt upgrade -y
-
-RUN apt  install -y mariadb-server 
-#apt clean read in chatgpt.
-
-# RUN  mkdir /run/mysqld 
-# RUN touch /run/mysqld mysqld.sock 
-COPY  ./conf/50-server.cnf /etc/mysql/mariadb.conf.d/.
+RUN apt-get -y update
+RUN apt-get -y upgrade
+RUN apt-get -y install mariadb-server
 
 COPY ./tools/script.sh .
 
-RUN  chmod +x script.sh
+RUN  chmod +x ./script.sh
 
 EXPOSE 3306
 
 
-CMD ["./script.sh"]
+CMD ["/bin/bash","script.sh"]
