--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -1,89 +1,61 @@
-
-
-# version: '3.8'
-
-# services:
-#   nginx:
-#     container_name: nginx
-#     build: requirements/nginx/.
-#     volumes:
-#       - ./web:/var/www/html
-#     ports: 
-#       - "80:80"
-#   wordpress:
-#     container_name: wordpress
-#     build: requirements/wordpress/.
-#     volumes:
-#       - ./web:/var/www/html
-#   mariadb:
-#     container_name: mariadb
-#     build: requirements/mariadb/.
-
-
 version: '3.8'
-
-services:
-  mariadb:
-    container_name: mariadb
-    networks:
-      - inception
-    build:
-      context: requirements/mariadb
-      dockerfile: Dockerfile
-    env_file: .env
-    volumes:
-      - mariadb:/var/lib/mysql
-    restart: always
-    expose:
-      - "3306"
-
-  nginx:
-    container_name: nginx
-    volumes:
-      - wordpress:/var/www/wordpress
-    networks:
-      - inception
-    depends_on:
-      - wordpress
-    build:
-      context: requirements/nginx
-      dockerfile: Dockerfile
-    env_file: .env
-    ports:
-      - "443:443"
-    restart: always
-
-  wordpress:
-    container_name: wordpress
-    env_file: .env
-    volumes:
-      - wordpress:/var/www/wordpress
-    networks:
-      - inception
-    build:
-      context: requirements/wordpress
-      dockerfile: Dockerfile
-    depends_on:
-      - mariadb
-    restart: always
-    expose:
-      - "9000"
-
 volumes:
   wordpress:
+    name : wordpress
     driver: local
     driver_opts:
-      type: 'none'
-      o: 'bind'
-      device: /home/usra/data/wordpress
+       type: none
+       o: bind
+       device: /home/usra/dataa/wordpress
+
   mariadb:
+    name : mariadb
     driver: local
     driver_opts:
-      type: 'none'
-      o: 'bind'
-      device: /home/usra/data/mariadb
+       type: none
+       o: bind
+       device: /home/usra/dataa/mariadb
 
 networks:
-  inception:
-    driver: bridge
+  Inception_network:
+    name: Inception_network
 
+
+services:
+
+  ngnix:
+    depends_on:
+      - wordpress
+    container_name : ngnix
+    build : requirements/nginx
+    image : ngnix
+    ports:
+      - 443:443
+    restart: on-failure
+    env_file: .env
+    networks:
+      - Inception_network
+    volumes :
+      - wordpress:/var/www/html
+
+  wordpress:
+    container_name : wordpress
+    build : requirements/wordpress
+    image : wordpress
+    restart: on-failure
+    env_file: .env
+    networks:
+      - Inception_network
+    volumes :
+      - wordpress:/var/www/html
+  
+  mariadb :
+    container_name : mariadb
+    build: requirements/mariadb
+    image : mariadb
+    restart: on-failure
+    env_file: .env
+    networks:
+      - Inception_network
+    volumes:
+      - mariadb:/var/lib/mysql
