--- a/srcs/requirements/wordpress/Dockerfile
+++ b/srcs/requirements/wordpress/Dockerfile
@@ -1,41 +1,28 @@
+FROM debian:oldstable
 
-FROM debian:latest
+RUN apt-get -y update
+RUN apt-get -y upgrade
+RUN apt-get install -y php-fpm php7.4-mysqli mariadb-client wget
 
+RUN echo "listen= wordpress:9000" >> /etc/php/7.4/fpm/php-fpm.conf
 
-RUN apt update -y
-RUN apt upgrade -y 
-RUN  apt install php-fpm  -y 
-RUN  apt install    mariadb-client -y
-RUN  apt install   php-mysql  -y
-RUN  apt install  curl -y
+RUN mkdir /run/php
 
-RUN apt-get install wget -y
-
-
-
-RUN wget https://fr.wordpress.org/wordpress-6.0-fr_FR.tar.gz -P /var/www
-
-
-RUN cd /var/www && tar -xzf wordpress-6.0-fr_FR.tar.gz && rm wordpress-6.0-fr_FR.tar.gz
-
-RUN		chown -R root:root /var/www/wordpress
-
-COPY ./conf/www.conf /etc/php/8.2/fpm/pool.d/.
 
 RUN wget https://raw.githubusercontent.com/wp-cli/builds/gh-pages/phar/wp-cli.phar
 RUN chmod +x wp-cli.phar
 RUN mv wp-cli.phar /usr/local/bin/wp
 
 
+WORKDIR /var/www/html/
 
-# COPY ./conf/wp-config.php /var/www/html/wordpress/wp-config.php
+RUN wp core download --allow-root
 
 
 
 COPY ./tools/script.sh .
-RUN chmod +x script.sh
+RUN chmod +x ./script.sh
 EXPOSE 9000
 
-CMD ["bash"]
-
+CMD ["/bin/bash", "script.sh"]
 
