--- a/srcs/.env
+++ b/srcs/.env
@@ -19,7 +19,7 @@ WP_ADMIN_PASSWORD=123456
 WP_ADMIN_EMAIL=usra1234@gmail.com
 
 # MYSQL Wordpress user
-WP_USER_LOGIN=iness
+WP_USER_LOGIN=sara
 WP_USER_PASSWORD=1234
 WP_USER_EMAIL=user@gmail.com
 WP_USER_ROLE=author
